Build super JAR with maven-assembly-plugin